# CNC_Program_Visualizer

./: CMakeLists.txt  Dockerfile  Makefile  README.md
app/: CMakeLists.txt
app/ConsoleApp/: CMakeLists.txt  main.cpp
app/GUI/: CMakeLists.txt
cmake/: AddExternalLibs.cmake  GithubIncludes.cmake
docs/drawio/: Diagrams.drawio  UI.drawio
sources/: CMakeLists.txt
sources/Coordinates/: CMakeLists.txt  Coordinates.cpp  Coordinates.hpp
sources/Data_Structures/: CMakeLists.txt
sources/Data_Structures/Coordinates/: CMakeLists.txt  Coordinates.cpp
sources/Data_Structures/Coordinates/include/Coordinates/: Coordinates.hpp
sources/Data_Structures/Material_Information/: CMakeLists.txt
sources/Data_Structures/Material_Information/include/Material_Information/: Material_Information.hpp
sources/Data_Structures/Tool_Information/: CMakeLists.txt
sources/Data_Structures/Tool_Information/include/Tool_Information/: Tool_Information.hpp
